Fixed errors, css, and updated collapsible components

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/HBIcon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
-        integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
-        crossorigin="anonymous"></script>
-    <meta name="description"
-        content="I am a results-oriented Creative Developer focused on analyzing complex business problems and designing appropriate solutions for business needs.  I possess strong hands-on development skills, collaboration skills, and the ability to interact with people at all levels.  A creative background coupled with development experience means excellent communication skills, the ability to easily adapt to environmental and organizational change, quick thinking, precision execution, and outside-the-box solutions when standard procedures don’t work." />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/HBIcon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
+    integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
+    crossorigin="anonymous"></script>
+  <meta name="description"
+    content="I am a results-oriented Creative Developer focused on analyzing complex business problems and designing appropriate solutions for business needs.  I possess strong hands-on development skills, collaboration skills, and the ability to interact with people at all levels.  A creative background coupled with development experience means excellent communication skills, the ability to easily adapt to environmental and organizational change, quick thinking, precision execution, and outside-the-box solutions when standard procedures don’t work." />
 
-
-    <title>Heath Bishop</title>
+  <base href="/" />
+  <title>Heath Bishop</title>
 </head>
 
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
